@@ -36,7 +36,6 @@
 
 CAMLexport int caml_callback_depth = 0;
 
-#ifndef LOCAL_CALLBACK_BYTECODE
 static opcode_t callback_code[] = { ACC, 0, APPLY, 0, POP, 1, STOP };
 
 static int callback_code_inited = 0;
@@ -52,25 +51,15 @@ static void init_callback_code(void)
   callback_code_inited = 1;
 }
 
-#endif
-
 CAMLexport value caml_callbackN_exn(value closure, int narg, value args[])
 {
   int i;
   value res;
 
-  /* some alternate bytecode implementations (e.g. a JIT translator)
-     might require that the bytecode is kept in a local variable on
-     the C stack */
-#ifdef LOCAL_CALLBACK_BYTECODE
-  opcode_t local_callback_code[7];
-#endif
-
   CAMLassert(narg + 4 <= 256);
 
   Caml_state->extern_sp -= narg + 4;
   for (i = 0; i < narg; i++) Caml_state->extern_sp[i] = args[i]; /* arguments */
-#ifndef LOCAL_CALLBACK_BYTECODE
   Caml_state->extern_sp[narg] = (value)(callback_code + 4); /* return address */
   Caml_state->extern_sp[narg + 1] = Val_unit;    /* environment */
   Caml_state->extern_sp[narg + 2] = Val_long(0); /* extra args */
@@ -79,27 +68,6 @@ CAMLexport value caml_callbackN_exn(value closure, int narg, value args[])
   callback_code[1] = narg + 3;
   callback_code[3] = narg;
   res = caml_interprete(callback_code, sizeof(callback_code));
-#else /*have LOCAL_CALLBACK_BYTECODE*/
-  /* return address */
-  Caml_state->extern_sp[narg] = (value) (local_callback_code + 4);
-  Caml_state->extern_sp[narg + 1] = Val_unit;    /* environment */
-  Caml_state->extern_sp[narg + 2] = Val_long(0); /* extra args */
-  Caml_state->extern_sp[narg + 3] = closure;
-  local_callback_code[0] = ACC;
-  local_callback_code[1] = narg + 3;
-  local_callback_code[2] = APPLY;
-  local_callback_code[3] = narg;
-  local_callback_code[4] = POP;
-  local_callback_code[5] =  1;
-  local_callback_code[6] = STOP;
-  /* Not registering the code fragment, as code fragment management
-     would need to be revised thoroughly for an hypothetical JIT */
-#ifdef THREADED_CODE
-  caml_thread_code(local_callback_code, sizeof(local_callback_code));
-#endif /*THREADED_CODE*/
-  res = caml_interprete(local_callback_code, sizeof(local_callback_code));
-  caml_release_bytecode(local_callback_code, sizeof(local_callback_code));
-#endif /*LOCAL_CALLBACK_BYTECODE*/
   if (Is_exception_result(res)) Caml_state->extern_sp += narg + 4; /* PR#3419 */
   return res;
 }
