@@ -26,12 +26,6 @@
 /* interpret a bytecode */
 value caml_interprete (code_t prog, asize_t prog_size);
 
-/* tell the runtime that a bytecode program might be needed */
-void caml_prepare_bytecode(code_t prog, asize_t prog_size);
-
-/* tell the runtime that a bytecode program is no more needed */
-void caml_release_bytecode(code_t prog, asize_t prog_size);
-
 #endif /* CAML_INTERNALS */
 
 #endif /* CAML_INTERP_H */
