@@ -120,7 +120,6 @@ CAMLprim value caml_reify_bytecode(value ls_prog,
 #ifdef THREADED_CODE
   caml_thread_code((code_t) prog, len);
 #endif
-  caml_prepare_bytecode((code_t) prog, len);
 
   /* Notify debugger after fragment gets added and reified. */
   caml_debugger(CODE_LOADED, Val_long(fragnum));
@@ -138,17 +137,14 @@ CAMLprim value caml_reify_bytecode(value ls_prog,
 }
 
 /* signal to the interpreter machinery that a bytecode is no more
-   needed (before freeing it) - this might be useful for a JIT
-   implementation */
+   needed (before freeing it) */
 
 CAMLprim value caml_static_release_bytecode(value bc)
 {
   code_t prog;
-  asize_t len;
   struct code_fragment *cf;
 
   prog = Bytecode_val(bc)->prog;
-  len = Bytecode_val(bc)->len;
   caml_remove_debug_info(prog);
 
   cf = caml_find_code_fragment_by_pc((char *) prog);
@@ -159,11 +155,6 @@ CAMLprim value caml_static_release_bytecode(value bc)
 
   caml_remove_code_fragment(cf);
 
-#ifndef NATIVE_CODE
-  caml_release_bytecode(prog, len);
-#else
-  caml_failwith("Meta.static_release_bytecode impossible with native code");
-#endif
   caml_stat_free(prog);
   return Val_unit;
 }
